--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-dnl @(#) $Header: /tcpdump/master/libpcap/configure.in,v 1.166 2008-12-14 21:03:07 guy Exp $ (LBL)
+dnl @(#) $Header: /tcpdump/master/libpcap/configure.in,v 1.167 2008-12-14 22:00:57 guy Exp $ (LBL)
 dnl
 dnl Copyright (c) 1994, 1995, 1996, 1997
 dnl	The Regents of the University of California.  All rights reserved.
@@ -6,7 +6,7 @@ dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
 
-AC_REVISION($Revision: 1.166 $)
+AC_REVISION($Revision: 1.167 $)
 AC_PREREQ(2.50)
 AC_INIT(pcap.c)
 
@@ -357,32 +357,10 @@ linux)
 	if test $ac_cv_linux_vers -lt 2 ; then
 		AC_MSG_ERROR(version 2 or higher required; see the INSTALL doc for more info)
 	fi
-	#
-	# First try configuring without <net/if.h>, and then try with
-	# <net/if.h>; in some kernel versions, linux/wireless.h includes
-	# net/if.h, and in other versions, it doesn't.
-	#
-	AC_CHECK_HEADERS(linux/wireless.h, [],
-	[
-		#
-		# It didn't work without <net/if.h>; try it with
-		# <net/if.h>.
-		#
-		# Unset ac_cv_header_linux_wireless_h so we don't
-		# treat the previous failure as a cached value and
-		# suppress the next test.
-		#
-		AC_MSG_NOTICE([Rechecking with some additional includes])
-		unset ac_cv_header_linux_wireless_h
-		AC_CHECK_HEADERS(linux/wireless.h, [], [],
-		[
-#include <sys/socket.h>
-#include <net/if.h>
-#include <linux/types.h>
-		])
-	],
+	AC_CHECK_HEADERS(linux/wireless.h, [], [],
 	[
 #include <sys/socket.h>
+#include <linux/if.h>
 #include <linux/types.h>
 	])
 	AC_LBL_TPACKET_STATS
