--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,23 @@
 Makefile
 *~
 *.o
+bpf_filter.c
 config.*
+grammar.c
+libpcap.a
+pcap-config
+pcap-filter.manmisc
+pcap-linktype.manmisc
+pcap-savefile.manfile
+pcap.3pcap
+pcap_compile.3pcap
+pcap_datalink.3pcap
+pcap_dump_open.3pcap
+pcap_list_datalinks.3pcap
+pcap_open_dead.3pcap
+pcap_open_offline.3pcap
+scanner.c
+scanner.h
+tokdefs.h
+version.c
+version.h
