To put mac80211 devices in monitor mode, create a "monN" device for the underlying adapter, bring it up, and capture on that.
This means libpcap nees to be linked with -lnl.

--- a/config.h.in
+++ b/config.h.in
@@ -56,6 +56,9 @@
 /* if libdlpi exists */
 #undef HAVE_LIBDLPI
 
+/* if libnl exists */
+#undef HAVE_LIBNL
+
 /* Define to 1 if you have the <limits.h> header file. */
 #undef HAVE_LIMITS_H
 
