Explicitly list the config.* files to ignore; config.guess and config.sub are in the Git repository.
Also list .devel as a file to ignore.

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,11 @@ Makefile
 *~
 *.o
 bpf_filter.c
-config.*
+config.h
+config.log
+config.cache
+config.status
+.devel
 grammar.c
 libpcap.a
 libpcap.*.dylib
