Add in the V_RPATH_OPT Makefile variable, set from the V_RPATH_OPT configure script variable.

--- a/Makefile.in
+++ b/Makefile.in
@@ -52,6 +52,7 @@ ADDLOBJ = @ADDLOBJ@
 LIBS = @V_LIBS@
 LDFLAGS = @LDFLAGS@
 DYEXT = @DYEXT@
+V_RPATH_OPT = @V_RPATH_OPT@
 PROG=libpcap
 
 # Standard CFLAGS
